--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,10 +5,13 @@
 
 .header-custom {
     text-align: center;
+}
+body {
     background: url('../img/background_center.jpg');
     background-position: center;
+    background-attachment: fixed;
+    background-size: cover;
 }
-
 .header-custom h1 {
     margin-top: 0;
     padding-top: 200px;
